logs/dag_id=ai_database_generator/run_id=manual__2025-11-03T053554.503409+0000/task_id=run_database_generation_script/attempt=1.log
[2025-11-03T05:35:57.046+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-11-03T05:35:57.089+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ai_database_generator.run_database_generation_script manual__2025-11-03T05:35:54.503409+00:00 [queued]>
[2025-11-03T05:35:57.100+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ai_database_generator.run_database_generation_script manual__2025-11-03T05:35:54.503409+00:00 [queued]>
[2025-11-03T05:35:57.101+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2025-11-03T05:35:57.117+0000] {taskinstance.py:2330} INFO - Executing <Task(_PythonDecoratedOperator): run_database_generation_script> on 2025-11-03 05:35:54.503409+00:00
[2025-11-03T05:35:57.125+0000] {standard_task_runner.py:63} INFO - Started process 530 to run task
[2025-11-03T05:35:57.130+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'ai_database_generator', 'run_database_generation_script', 'manual__2025-11-03T05:35:54.503409+00:00', '--job-id', '1268', '--raw', '--subdir', 'DAGS_FOLDER/ai_database_generator_dag.py', '--cfg-path', '/tmp/tmp_e6avaes']
[2025-11-03T05:35:57.133+0000] {standard_task_runner.py:91} INFO - Job 1268: Subtask run_database_generation_script
[2025-11-03T05:35:57.235+0000] {task_command.py:426} INFO - Running <TaskInstance: ai_database_generator.run_database_generation_script manual__2025-11-03T05:35:54.503409+00:00 [running]> on host a52de7a1027c
[2025-11-03T05:35:57.580+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='ai_database_generator' AIRFLOW_CTX_TASK_ID='run_database_generation_script' AIRFLOW_CTX_EXECUTION_DATE='2025-11-03T05:35:54.503409+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-11-03T05:35:54.503409+00:00'
[2025-11-03T05:35:57.581+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-11-03T05:35:57.582+0000] {logging_mixin.py:188} INFO - Importing AI-generated script...
[2025-11-03T05:35:57.623+0000] {logging_mixin.py:188} INFO - Error importing generator function: unterminated string literal (detected at line 1) (database_generator.py, line 1)
[2025-11-03T05:35:57.624+0000] {logging_mixin.py:188} INFO - Did the AI generate the code correctly? Does 'main()' exist?
[2025-11-03T05:35:57.625+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-11-03T05:35:57.626+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
                   ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/ai_database_generator_dag.py", line 45, in run_database_generation_script
    generator_module = importlib.import_module(GENERATOR_MODULE_NAME)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/utils/database_generator.py", line 1
    {OUTPUT_DIR}' ensured.")
                ^
SyntaxError: unterminated string literal (detected at line 1)
[2025-11-03T05:35:57.650+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=ai_database_generator, task_id=run_database_generation_script, run_id=manual__2025-11-03T05:35:54.503409+00:00, execution_date=20251103T053554, start_date=20251103T053557, end_date=20251103T053557
[2025-11-03T05:35:57.669+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 1268 for task run_database_generation_script (unterminated string literal (detected at line 1) (database_generator.py, line 1); 530)
[2025-11-03T05:35:57.704+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-11-03T05:35:57.730+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-11-03T05:35:57.734+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
